feat: change avatar options map to be unmodifiable for better integrity